replace indentLink fix with with the upstream fix

https://bugs.webkit.org/show_bug.cgi?id=87428
DRQS 32418391
While testing on upstream, I found a subtle issue with the previous fix.  The
upstream fix contains a better implementation, so merging it back to our
codebase.